<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nino Milano</string>
    <string name="action_settings">Settings</string>
    <string name="title_Home">Home</string>
    <string name="title_Contact">Contact Us</string>
    <string name="title_Map">Map</string>
    <string name="title_Loyalty">Loyalty Card</string>
    <string name="title_Social">Social</string>
    <string name="title_Prices">Prices</string>
    <string name="title_Testimonials">Testimonials</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_firstName">Firstname</string>
    <string name="hint_surname">Surname</string>
    <string name="hint_male">Male</string>
    <string name="hint_female">Female</string>
    <string name="hint_signup">Sign up</string>
    <string name="string_createNewAccount">Create a new account</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="string_personalDetails">Personal Details</string>
    <string name="string_accountDetails">Account Details</string>
    <string name="hint_login">Log In</string>
    <string name="string_currentBalance">Current Balance:</string>
    <string name="string_LoyaltyID">Loyalty Card ID:</string>
    <string name="app_id">289228091233524</string>
    <string name="title_facebook_login">Facebook Login</string>
</resources>
